# ContactlessPiPoweredDrumkit

./: README.md
embedded/: CMakeLists.txt  Doxyfile  Makefile  btb_proj.cbp  btb_proj.depend  btb_proj.layout  cmake_build_instructions.txt  readme.md  unit_tests.txt
embedded/docs/: CppThread_8h_source.html  CppTimer_8h_source.html  VL53L4CD__api_8h_source.html  annotated.html  btb__main_8h_source.html  classController-members.html  classController.html  classCppThread-members.html  classCppThread.html  classCppTimer-members.html  classCppTimer.html  classGpioController-members.html  classGpioController.html  classLedControl-members.html  classLedControl.html  classPlatformVL53l4CD-members.html  classPlatformVL53l4CD.html  classSound-members.html  classSound.html  classVL53L4CD-members.html  classVL53L4CD.html  classVL53L4CD__API-members.html  classVL53L4CD__API.html  classes.html  controller_8h_source.html  defines_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  gpio__controller_8h_source.html  hierarchy.html  index.html  led_8h_source.html  menudata.js  platform_8h_source.html  ranging_8h_source.html  sound_8h_source.html  structVL53L4CD__LinuxDev-members.html  (+10 more)
embedded/docs/pdf/: CppThread_8h_source.tex  CppTimer_8h_source.tex  VL53L4CD__api_8h_source.tex  annotated.tex  btb__main_8h_source.tex  classController.eps  classController.tex  classCppThread.tex  classCppTimer.eps  classCppTimer.tex  classGpioController.tex  classLedControl.eps  classLedControl.tex  classPlatformVL53l4CD.tex  classSound.tex  classVL53L4CD.eps  classVL53L4CD.tex  classVL53L4CD__API.tex  controller_8h_source.tex  defines_8h_source.tex  files.tex  gpio__controller_8h_source.tex  hierarchy.tex  led_8h_source.tex  platform_8h_source.tex  ranging_8h_source.tex  refman.tex  sound_8h_source.tex  structVL53L4CD__LinuxDev.tex  structVL53L4CD__ResultsData__t.tex  structVL53L4CD__Version__t.tex  structsensorHit.tex  structsensorValues.tex  types_8h_source.tex
embedded/docs/search/: all_0.js  all_10.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  (+11 more)
embedded/examples/: Example_1_ranging_basic.c  Example_2_low_power.c  Example_3_high_accuracy.c  Example_4_fast_ranging.c  Example_5_calibrate_offset_xtalk.c  Example_6_detection_thresholds.c  examples.h
embedded/include/: VL53L4CD_api.h  VL53L4CD_api.h.gch  btb_main.h  controller.h  defines.h  examples.h.gch  gpio_controller.h  led.h  platform.h  platform.h.gch  ranging.h  sound.h  types.h  types.h.gch
embedded/src/: VL53L4CD_api.c  VL53L4CD_api.cpp  btb_main.c  btb_main.cpp  controller.cpp  gpio_controller.cpp  led.cpp  platform.c  platform.cpp  ranging.cpp  sound.cpp
embedded/test/: readme.md
(+90 files in other folders)
